feat: add support for build metadata (#82)